Bug #19572 Memory leaks in cluster when running make test
Submitted: 5 May 2006 21:55 Modified: 9 May 2006 22:10
Reporter: Michael Widenius Email Updates:
Status: Closed
Category:Server: Cluster Severity:S1 (Critical)
Version:5.1.10 OS:Intel 86x64
Assigned to: Tomas Ulin Target Version:

[5 May 2006 21:55] Michael Widenius
Description:
It's only the second part of the test (row based replication and ps protocol) that gives
memory leaks.

How to repeat:
BUILD/compile-pentium64-debug-max
cd mysql-test
./mysql-test-run.pl --ps-protocol --force --mysqld=--binlog-format=row

The leaks can be found in var/log/master1.err

I will attach the master1.err file to the bug report
[5 May 2006 21:55] Michael Widenius
Error file while running the test

Attachment: master1.err (application/octet-stream, text), 110.08 KiB.

[5 May 2006 22:15] Michael Widenius
Simpler test case:

mysql-test-run.pl --force  --ps-protocol --mysqld=--binlog-format=row ndb_alter_table
[6 May 2006 8:09] Tomas Ulin
fixed bk commit - 5.1 tree (tomas:1.2381)
[8 May 2006 12:42] Michael Widenius
Did a pull and tested, but bug still present: ndb_alter_table  gives 55 memory leaks
[8 May 2006 14:17] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/6098
[9 May 2006 22:10] Tomas Ulin
don't see any anymore,  please reopen if found again