Bug #19572 Memory leaks in cluster when running make test